# aenimal-util

./: configure.ac
src/: Makefile.am
src/basic/: Makefile.am  au_basic.c  au_basic.h
src/perm/: Makefile.am  au_perm.c  au_perm.h
src/rand/: Makefile.am  au_rand.c  au_rand.h
test/: Makefile.am
test/basic/: Makefile.am  check_basic.c  power.c
test/perm/: Makefile.am  check_perm.c
test/rand/: Makefile.am  check_rand.c
